commit final working version

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,4 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        app:showAsAction="never"
+        android:id="@+id/language_english"
+        android:title="@string/english"/>
+
+    <item
+        app:showAsAction="never"
+        android:id="@+id/language_zulu"
+        android:title="@string/zulu"/>
+
+    <item
+        app:showAsAction="never"
+        android:id="@+id/language_afrikaans"
+        android:title="@string/afrikaans"/>
 
 </menu>
